--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "mysql": "^2.16.0",
     "node": "^11.1.0",
     "socket.io": "^2.1.1"
